--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "python-dotenv==1.1.0",
     "fastapi==0.115.12",
     "uvicorn==0.34.3",
+    "gunicorn==23.0.0",
     "python-multipart==0.0.20"
 ]
 
