--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pytest==8.3.5",
     "python-dotenv==1.1.0",
     "fastapi==0.115.12",
+    "httpx==0.28.1",
     "uvicorn==0.34.3",
     "gunicorn==23.0.0",
     "python-multipart==0.0.20"
