Add chatbot functionality to API as a websocket
Expand dependencies accordingly in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,10 @@ dependencies = [
     "httpx==0.28.1",
     "uvicorn==0.34.3",
     "gunicorn==23.0.0",
-    "python-multipart==0.0.20"
+    "python-multipart==0.0.20",
+    "transformers==4.52.4",
+    "accelerate==1.7.0",
+    "websockets==15.0.1"
 ]
 
 [tool.ruff.lint]
