--- a/.github/workflows/basic_deploy_flow.yaml
+++ b/.github/workflows/basic_deploy_flow.yaml
@@ -17,12 +17,12 @@ jobs:
 
       - name: Connect and run test command
         run: |
-          run: |
-                ssh ${{ secrets.GCP_VM_USER }}@${{ secrets.GCP_VM_IP }} << 'EOF'
-                echo "Pulling latest code..."
-                cd playground_api
-                git pull origin main
-                chmod +x deploy.sh
-                cd ..
-                ./deploy.sh
-                EOF
+          ssh ${{ secrets.GCP_VM_USER }}@${{ secrets.GCP_VM_IP }} << 'EOF'
+          set -e
+          echo "Pulling latest code..."
+          cd playground_api
+          git pull origin main
+          chmod +x deploy.sh
+          cd ..
+          ./deploy.sh
+          EOF
