recover accidentally removed uv venv in ci flow

--- a/.github/workflows/basic_deploy_flow.yaml
+++ b/.github/workflows/basic_deploy_flow.yaml
@@ -4,13 +4,12 @@ on:
   push:
     tags:
       - '*'
-    branches:
-      - main
+      
+  workflow_dispatch:
 
 jobs:
-  ssh-test:
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Setup SSH
         run: |
