--- a/.github/workflows/basic_ci_flow.yaml
+++ b/.github/workflows/basic_ci_flow.yaml
@@ -68,12 +68,15 @@ jobs:
       - name: Cache uv dependencies
         uses: actions/cache@v4
         with:
-          path: ~/.cache/uv
+          path: |
+            ~/.cache/uv
+            .venv
           key: uv-${{ runner.os }}-${{ hashFiles('**/uv.lock', '**/pyproject.toml') }}
-          restore-keys: uv-${{ runner.os }}-
-      
+          restore-keys: |
+            uv-${{ runner.os }}-
+
       - name: Create virtual environment and install dependencies
-        run: uv pip install pytest==8.3.5
+        run: uv venv && uv pip install pytest==8.3.5
 
       - name: Run run.py test
         run: uv run pytest tests/test_run.py -v
