better git logic in deploy flow

--- a/.github/workflows/basic_cd_flow.yaml
+++ b/.github/workflows/basic_cd_flow.yaml
@@ -24,7 +24,10 @@ jobs:
           set -e
           echo "Pulling latest code..."
           cd playground_api
-          git pull origin main
+          git fetch origin main
+          git checkout -f main
+          git reset --hard origin/main
+          git clean -fd
           chmod +x deploy.sh
           ./deploy.sh
           EOF
